# Computer_Vision_Project

./: Justfile  README.md  locust.py  pyproject.toml
app/api/: config.yaml  models.py  server.py  service.py
app/core/body_gestures/: check_hands_joined.py  check_horizontal_movement.py  check_vertical_movement.py  detect_pose.py
app/core/hand_gestures/: __init__.py  calculate_movement_vector.py  detect_gestures.py  initialize.py  is_in_neutral_zone.py  is_thumb_up.py  pydantic_models.py  run.py  update_hand_history.py
app/gui/: main_window.py
app/utils/: config_types.py  configs.toml  logging_client.py  logging_server.py
app/utils/logs/: logs.txt
config/: config.yaml
project-docs/: mkdocs.yml
project-docs/docs/: api.md  architecture.md  features.md  index.md  installation.md  load_testing.md  usage.md
