[project]
name = "gaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.4.5",
    "fastapi[standard]>=0.115.11",
    "gradio>=5.21.0",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "ruff>=0.11.0",
    "streamlit>=1.43.2",
]
