[project]
name = "gaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.4.1",
    "fastapi[standard]>=0.115.11",
    "gradio>=5.21.0",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "ruff>=0.11.0",
    "ray[serve]>=2.42.1",
    "streamlit>=1.43.2",
    "logger>=1.4",
    "loguru>=0.7.3",
    "mkdocs-material>=9.6.9",
    "locust>=2.33.2",
]

[ruff.tool]
select = ["ALL"]
